omni/tests/goldens/types/undefined_ident_05.err
tests/goldens/types/undefined_ident_05.omni:1:19: error: undefined identifier "missing5"
  let result5:int = missing5
                    ~~~~~~~~ hint: declare the variable with 'let missing5: <type> = <value>' or 'var missing5: <type> = <value>' before using it
