omni/tests/goldens/types/undefined_ident_05.omni
let result5:int = missing5
